--- a/DllTestConsole/DllTestConsole.vcxproj
+++ b/DllTestConsole/DllTestConsole.vcxproj
@@ -88,11 +88,18 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\opencv-4.7.0\build\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world470d.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_world470d.dll $(OutDir)
+copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_videoio_msmf470_64d.dll $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -102,13 +109,20 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\opencv-4.7.0\build\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world470.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_world470.dll $(OutDir)
+copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_videoio_msmf470_64.dll $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -116,11 +130,18 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\opencv-4.7.0\build\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world470d.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_world470d.dll $(OutDir)
+copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_videoio_msmf470_64d.dll $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -130,13 +151,20 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\opencv-4.7.0\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world470.lib</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_world470.dll $(OutDir)
+copy $(SolutionDir)\opencv-4.7.0\build\$(Platform)\vc16\bin\opencv_videoio_msmf470_64.dll $(OutDir)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DllTestConsole.cpp" />
