--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -30,6 +30,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: unzip 3rd party library
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: unzip -qq opencv-4.7.0.zip
+    
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
 
