--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: unzip 3rd party library
       working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: unzip -qq opencv-4.7.0.zip
+      run: ls; unzip -qq opencv-4.7.0.zip
     
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
