--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -29,6 +29,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+          lfs: 'true'
 
     - name: unzip 3rd party library
       working-directory: ${{env.GITHUB_WORKSPACE}}
